[gd_scene load_steps=2 format=3 uid="uid://bocctmygcfhnb"]

[ext_resource type="Script" path="res://ApiConnection.gd" id="1_grpq0"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_grpq0")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 98.0
offset_top = 81.0
offset_right = 438.0
offset_bottom = 187.0
text = "Receber dados do servidor"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="button_up" from="Button" to="." method="_get_api_data"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
